<<<<<<< HEAD
<resources>
    <string name="app_name">Splash</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="registerlable">Don\'t Have Account ?</string>
</resources>
=======
<resources>
    <string name="app_name">Splash</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="registerlable">Don\'t Have Account ?</string>
    <string name="Name">Name</string>
    <string name="Start_Address">Start Address</string>
    <string name="End_Address">End Address</string>
    <string name="Date">Date</string>
    <string name="Notes">Notes</string>
    <string name="Save">Save</string>
    <string name="DateTime" />
    <string name="DatePick">Pick Date</string>
    <string name="hide_btn">Pick Return</string>
    <string name="textview" />
</resources>
>>>>>>> 827b854cb00701fef655b6795d534fc109d9bb5f
