<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="eg.iti.losh.splash.addTrip">

    <fragment
        android:id="@+id/Start_Frag"
        android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/Name_text"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignStart="@+id/Name_text"
        android:layout_alignTop="@+id/textView3" />

    <fragment
        android:id="@+id/End_Frag"
        android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/Start_Frag"
        android:layout_alignStart="@+id/Start_Frag"
        android:layout_below="@+id/Start_Frag"
        android:layout_marginTop="14dp" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/textView3"
        android:layout_marginTop="44dp"
        android:text="@string/Name" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView4"
        android:layout_alignStart="@+id/textView4"
        android:layout_below="@+id/Name_text"
        android:layout_marginTop="17dp"
        android:text="@string/Start_Address" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/End_Frag"
        android:layout_marginLeft="21dp"
        android:layout_marginStart="21dp"
        android:text="@string/End_Address" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView4"
        android:layout_alignStart="@+id/textView4"
        android:layout_below="@+id/End_Frag"
        android:layout_marginTop="17dp"
        android:text="@string/Date" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView5"
        android:layout_alignStart="@+id/textView5"
        android:layout_below="@+id/Date_Text"
        android:layout_marginTop="15dp"
        android:text="@string/Notes" />

    <EditText
        android:id="@+id/Name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/textView2"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name" />

    <EditText
        android:id="@+id/Notes_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/textView6"
        android:layout_toEndOf="@+id/textView3"
        android:layout_toRightOf="@+id/textView3"
        android:ems="10"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/Save_BTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="33dp"
        android:text="@string/Save" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Notes_text"
        android:layout_toLeftOf="@+id/Notes_text"
        android:layout_toStartOf="@+id/Notes_text"
        android:text="Round Trip" />

    <Button
        android:id="@+id/Pick_Date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/End_Frag"
        android:layout_alignStart="@+id/End_Frag"
        android:layout_alignTop="@+id/textView5"
        android:text="@string/DatePick" />

    <TextView
        android:id="@+id/Date_Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Pick_Date"
        android:layout_toEndOf="@+id/textView2"
        android:layout_toRightOf="@+id/textView2"
        android:text="@string/DateTime" />

    <Button
        android:id="@+id/Return_BTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Notes_text"
        android:layout_toEndOf="@+id/Pick_Date"
        android:layout_toRightOf="@+id/Pick_Date"
        android:text="@string/hide_btn" />

    <TextView
        android:id="@+id/Return_Date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Return_BTN"
        android:layout_marginEnd="14dp"
        android:layout_marginRight="14dp"
        android:layout_toLeftOf="@+id/Save_BTN"
        android:layout_toStartOf="@+id/Save_BTN"
        android:text="@string/textview" />

</RelativeLayout>
